--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,300&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
 body{
-    background-color:  grey;
+    background-color: grey;
     font-family: 'Poppins', sans-serif;
     font-weight: bolder;
     color: white;
@@ -16,118 +16,148 @@ body{
     flex-direction: column;
 
 }
+.dropdown-item{
+	text-align: center;
+}
 
-
-.header{
+.header {
     grid-area: header;
     background-color: rgb(205, 249, 255);
-    display: flex;  
-    
 }
 
 
-.contenido1{
+.contenido1 {
     grid-area: contenido1;
     gap: 10px;
     padding-left: 2em;
     padding-right: 2em;
 }
-.contenido2{
+
+.contenido2 {
     grid-area: contenido2;
     gap: 10px;
     padding-left: 2em;
     padding-right: 2em;
 }
 
-.footer{
+.footer {
     color: gray;
     grid-area: footer;
     margin-bottom: 0;
     margin-top: 3em;
     background-color: rgb(205, 249, 255);
 }
-.contenido2-1{
+
+.contenido2-1 {
     grid-area: contenido2-1;
 }
-.contenido2-2{
+
+.contenido2-2 {
     grid-area: contenido2-2;
 }
 
-.grilla{
+.grilla {
     display: grid;
-    gap: 10px;
-    grid-template-areas: 
-    "header"
-    "contenido1"
-    "contenido2"
-    "footer";
+    gap: 3em;
+    grid-template-areas:
+        "header"
+        "contenido1"
+        "contenido2"
+        "footer";
 }
 
-.imginicio{
+.imginicio {
     width: 300px;
     height: 250px;
     margin-top: 1.em;
     margin-bottom: 1.5em;
 }
-a:hover{
+.imgcarousel{
+	width: 300px;
+    height: 250px;
+}
+
+
+a:hover {
     transform: scale(1.1);
 }
-a{
+
+a {
     transition-property: all;
     transition-duration: 2s;
 }
 
-.iconig{
+.iconig {
     width: 64px;
     height: 64px;
     transition-property: all;
     transition-duration: 2.2s;
 }
-.iconig:hover{
+
+.iconig:hover {
     transform: scale(1.5) rotate(360deg);
 }
 
-.imgavatar{
-    width: 216px;
-    height: 216px;
-}
-.gridform{
+
+
+.gridform {
     display: grid;
     grid-template-columns: 1fr;
     flex-direction: column;
     gap: 0.5em;
-    
-    
+
+
 }
 
 
-.contenidoContacto{
+.contenidoContacto {
     grid-area: contenidoContacto;
     padding-left: 1em;
     padding-right: 1em;
+    gap: 3em;
+    padding-top: 2em;
 }
 
-.grillaContacto{
+.grillaContacto {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas:
-    "header"
-    "contenidoContacto"
-    "footer";
-    
+        "header"
+        "contenidoContacto"
+        "footer";
+
 }
-.imgrecetas{
+
+.form1 {
+    padding-top: 3em;
+    gap: 1em;
+}
+
+.form2 {
+    padding-top: 3em;
+    padding-bottom: 3em;
+    gap: 1em;
+}
+
+.imgrecetas {
     width: 300px;
     height: 250px;
 }
-.imgrecetasexp{
+
+.imgrecetasexp {
     width: 300px;
     height: 250px;
 }
-ul li{
+.imgpostres{
+    width: 300px;
+    height: 250px;
+}
+
+ul li {
     list-style-type: none;
 }
-.h2recetas{
+
+.h2recetas {
     font-size: x-large;
     font-style: italic;
     padding: 1em;
@@ -135,233 +165,389 @@ ul li{
 
 
 
-.recetasTitulo{
+.recetasTitulo {
     grid-area: recetasTitulo;
 }
-.recetasPart1{
+
+.recetasPart1 {
     grid-area: recetasPart1;
     gap: 2em;
     text-align: justify;
     padding-left: 1em;
     padding-right: 1em;
 }
-.recetasPart2{
+
+.recetasPart2 {
     grid-area: recetasPart2;
     gap: 2em;
     text-align: justify;
     padding-left: 1em;
     padding-right: 1em;
 }
-.recetasPart3{
+
+.recetasPart3 {
     grid-area: recetasPart3;
     gap: 2em;
     text-align: justify;
     padding-left: 1em;
     padding-right: 1em;
 }
-.recetasPart4{
+
+.recetasPart4 {
     grid-area: recetasPart4;
     gap: 2em;
     text-align: justify;
     padding-left: 1em;
     padding-right: 1em;
 }
-.recetasPart5{
+
+.recetasPart5 {
     grid-area: recetasPart5;
 }
 
-.grillaRecetas{
+.grillaRecetas {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-areas: 
-    "header"
-    "recetasTitulo"
-    "recetasPart1"
-    "recetasPart2"
-    "recetasPart3"
-    "recetasPart4"
-    "recetasPart5"
-    "footer";
+    grid-template-areas:
+        "header"
+        "recetasTitulo"
+        "recetasPart1"
+        "recetasPart2"
+        "recetasPart3"
+        "recetasPart4"
+        "recetasPart5"
+        "footer";
     text-align: center;
     gap: 3em;
 }
-.imgExp{
+
+.imgExp {
     width: 300px;
     height: 250px;
     margin: 1em;
-    border: 1px groove rgb(205, 249, 255); ;
+    border: 1px groove rgb(205, 249, 255);
+    ;
 }
-.recetasExp1{
+
+.recetasExp1 {
     grid-area: recetasExp1;
     gap: 2em;
-    
+
     padding-left: 1em;
     padding-right: 1em;
 }
-.recetasExp2{
+
+.recetasExp2 {
     grid-area: recetasExp2;
     gap: 2em;
     text-align: justify;
     padding-left: 1em;
     padding-right: 1em;
 }
-.recetasExp3{
+
+.recetasExp3 {
     grid-area: recetasExp3;
     gap: 2em;
     text-align: justify;
     padding-left: 1em;
     padding-right: 1em;
 }
-.recetasExp4{
+
+.recetasExp4 {
     grid-area: recetasExp4;
 }
-.pExpress{
+
+.pExpress {
     text-align: justify;
     margin: 2em;
 }
-.grillaRecetasExp{
+
+.grillaRecetasExp {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-areas: 
-    "header"
-    "recetasExp1"
-    "recetasExp2"
-    "recetasExp3"
-    "recetasExp4"
-    "footer";
+    grid-template-areas:
+        "header"
+        "recetasExp1"
+        "recetasExp2"
+        "recetasExp3"
+        "recetasExp4"
+        "footer";
     align-items: center;
 }
-.enviar{
-    border-radius: 15%;
-    background-color: rgb(205, 249, 255);
-    color: black;
-    font-weight: bolder;
-    padding: 5px 10px 5px 10px;
+
+.btnEnviar{
+	padding: 0 2em 2em 2em;
 }
 
-@media(min-width:500px){
-    .imginicio{
+.postres1{
+    grid-area: postres1;
+    text-align: justify;
+    padding-left: 2em;
+    padding-right: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+}
+.postres2{
+    grid-area: postres2;
+    gap: 2em;
+    text-align: left;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+.postres3{
+    grid-area: postres3;
+    gap: 2em;
+    text-align: justify;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+.postres4{
+    grid-area: postres4;
+    align-items: center;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+
+
+
+@media(min-width:500px) {
+    .imginicio {
         width: 450px;
         height: 400px;
     }
 
-    .header{
+    .header {
         height: 50px;
     }
-    .footer{
+
+    .footer {
         height: 150px;
     }
 
-    .imgrecetas{
+    .imgrecetas {
         width: 450px;
         height: 400px;
     }
-    .imgrecetasexp{
+
+    .imgrecetasexp {
         width: 450px;
         height: 350px;
     }
-    .imgExp{
+    .imgpostres{
+        width: 450px;
+        height: 350px;
+    }
+
+    .imgExp {
         width: 400px;
         height: 350px;
         margin: 1em;
-        border: 1px groove rgb(205, 249, 255); ;
+        border: 1px groove rgb(205, 249, 255);
+        ;
+    }
+
+	.imgcarousel{
+		width: 400px;
+        height: 350px;
+	}
+    .postres4{
+        display: flex;
+        justify-content: center;
+        margin-top: 2em;
+        margin-bottom: 2em;
     }
 
 }
 
-@media(min-width: 768px){
-    .contenido1{
+@media(min-width: 768px) {
+    .contenido1 {
         padding-left: 5em;
         padding-right: 5em;
     }
-    .contenido2{
+
+    .contenido2 {
         display: grid;
-        grid-template-columns: 1 fr 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-template-areas: "contenido2-1 contenido2-2";
         padding-left: 5em;
         padding-right: 5em;
+		gap: 3em;
     }
+	.contenido2-2{
+		justify-content: center;
+	}
+	.contenido2-1{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
 
-    .imginicio{
+    .imginicio {
         width: 750px;
         height: 700px;
     }
+	.imgcarousel{
+		width: 750px;
+        height: 600px;
+	}
 
-    .grilla{
-        gap: 2em;
-        
+    .grilla {
+        gap: 5em;
+
     }
-    .header{
+
+    .header {
         height: 50px;
     }
-    .footer{
+
+    .footer {
         height: 180px;
     }
 
-    .grillaRecetas{
+    .grillaRecetas {
         grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-        "header header"
-        "recetasTitulo recetasTitulo"
-        "recetasPart1 recetasPart2"
-        "recetasPart3 recetasPart4"
-        "recetasPart5 recetasPart5"
-        "footer footer";
+        grid-template-areas:
+            "header header"
+            "recetasTitulo recetasTitulo"
+            "recetasPart1 recetasPart2"
+            "recetasPart3 recetasPart4"
+            "recetasPart5 recetasPart5"
+            "footer footer";
     }
-    .imgrecetas{
+
+    .imgrecetas {
         width: 600px;
         height: 550px;
     }
-    .imgrecetasexp{
+
+    .imgrecetasexp {
         width: 700px;
         height: 500px;
     }
+    .imgpostres{
+        width: 700px;
+        height: 550px;
+    }
 
-    .recetasPart1{
+    .recetasPart1 {
         padding-left: 5em;
         padding-right: 5em;
     }
-    .recetasPart2{
+
+    .recetasPart2 {
         padding-left: 5em;
         padding-right: 5em;
     }
-    .recetasPart3{
+
+    .recetasPart3 {
         padding-left: 5em;
         padding-right: 5em;
     }
-    .recetasPart4{
+
+    .recetasPart4 {
         padding-left: 5em;
         padding-right: 5em;
     }
-    .recetasPart5{
+
+    .recetasPart5 {
         padding-left: 5em;
         padding-right: 5em;
     }
-    .grillaRecetasExp{
-        grid-template-columns: 2fr 3fr;
-        grid-template-areas: 
+
+    .grillaRecetasExp {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "header header"
+            "recetasExp1 recetasExp1"
+            "recetasExp2 recetasExp3"
+            "recetasExp4 recetasExp4"
+            "footer footer";
+    }
+
+    .recetasExp1 {
+        padding-left: 5em;
+        padding-right: 5em;
+    }
+
+    .recetasExp2 {
+        padding-left: 5em;
+        padding-right: 5em;
+        height: 236px;
+    }
+
+    .recetasExp3 {
+        padding-left: 5em;
+        padding-right: 5em;
+        height: 236px;
+    }
+
+    .recetasExp4 {
+        padding-left: 5em;
+        padding-right: 5em;
+        margin-top: 12em;
+    }
+
+    .grillaPostres{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
         "header header"
-        "recetasExp1 recetasExp1"
-        "recetasExp2 recetasExp3"
-        "recetasExp4 recetasExp4"
+        "postres1 postres1"
+        "postres2 postres3"
+        "postres4 postres4"
         "footer footer";
+        gap: 2em;
     }
-    .recetasExp1{
+    .postres1{
         padding-left: 5em;
-        padding-right: 5em; 
+        padding-right: 5em;
     }
-    .recetasExp2{
+    .postres2{
         padding-left: 5em;
-        padding-right: 5em; 
+        padding-right: 5em;
+        gap: 2em;
     }
-    .recetasExp3{
+    .postres2Lista{
+        gap: 2em;
+    }
+    .postres3{
         padding-left: 5em;
-        padding-right: 5em; 
+        padding-right: 5em;
     }
-    .recetasExp4{
-        padding-left: 5em;
-        padding-right: 5em; 
+    .postres4{
+        display: flex;
+        justify-content: center;
+        margin-top: 2em;
+        margin-bottom: 2em;
     }
-}    
 
+}
 
+@media(min-width: 1000px) {
+    .recetasExp4 {
+        margin-top: 5em;
+    }
+    .imgpostres{
+        width: 900px;
+        height: 700px;
+    }
+    
+    .postres4{
+        padding-left: 8em;
+        padding-right: 8em;
+        margin-top: 3em;
+        margin-bottom: 2em;
+        
+    }
+    .imgrecetasexp{
+        width: 900px;
+        height: 700px;
+    }
+    .imgrecetas{
+        width: 900px;
+        height: 700px;
+    }
+}
