--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,12 @@ body{
     color: gray;
     grid-area: footer;
     margin-bottom: 0;
-    margin-top: 3em;
+    margin-top: 2em;
     background-color: rgb(205, 249, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 150px;
 }
 
 .contenido2-1 {
@@ -167,6 +171,10 @@ ul li {
 
 .recetasTitulo {
     grid-area: recetasTitulo;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
 }
 
 .recetasPart1 {
@@ -404,7 +412,7 @@ ul li {
     }
 
     .footer {
-        height: 180px;
+        height: 150px;
     }
 
     .grillaRecetas {
