--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,12 +7,13 @@
 body {
   background-color: grey;
   font-family: "Poppins", sans-serif;
-  font-weight: bolder;
   color: white;
   min-height: 100vh;
   text-align: center;
   display: flex;
   flex-direction: column;
+  font-style: italic;
+  font-size: larger;
 }
 
 .imginicio {
@@ -34,6 +35,7 @@ ul li {
 .header {
   grid-area: header;
   background-color: rgb(205, 249, 255);
+  font-weight: bolder;
 }
 
 .dropdown-item {
@@ -323,6 +325,9 @@ a {
   }
 }
 @media (min-width: 768px) {
+  .header{
+    height: 60px;
+  }
   .contenido1 {
     padding-left: 5em;
     padding-right: 5em;
@@ -354,9 +359,7 @@ a {
   .grilla {
     gap: 5em;
   }
-  .header {
-    height: 50px;
-  }
+  
   .footer {
     height: 150px;
   }
